<resources>
    <!-- General Strings -->
    <string name="app_name">cwQuizApp</string>
    <string name="nxt_btn">NEXT</string>

    <!-- Strings for MainActivity -->
    <string name="welcome_text">Welcome to my quiz App!</string>
    <string name="enter_user_details">Enter Name &amp; Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="next_button">NEXT!</string>
    <string name="login_button">LOGIN</string>
    <string name="logout_button">LOGOUT</string>
    <string name="reg_button">REGISTER</string>
    <string name="greeting_text">Hello! Please sign in or register below!\n</string>
    <string name="logged_in">Welcome %1$s\n</string>

    <!-- Strings for HomeActivity -->
    <string name="welcome_message">WELCOME %1$s</string>
    <string name="error_getting_user_email">Error getting user email: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="no_category_selected">No category selected</string>
    <string name="error_fetching_last_category">Error fetching lastCategory: %1$s</string>
    <string name="in_on_start">in onStart</string>
    <string name="in_on_resume">in onResume</string>
    <string name="last_login">Last Login: </string>
    <string name="current_streak">Current Streak: </string>
    <string name="last_category">Last Category: </string>
    <string name="no_data">No Data</string>

    <!-- Category Strings -->
    <string name="sports_cat">Sports</string>
    <string name="geography_cat">Geography</string>
    <string name="food_cat">Food</string>
    <string name="movies_cat">Movies</string>
    <string name="history_cat">History</string>
    <string name="science_cat">Science</string>
    <string name="art_cat">Art</string>
    <string name="music_cat">Music</string>

    <!-- Strings for UserStatsActivity -->
    <string name="current_user_id_null">Current User ID is null!</string>
    <string name="failed_fetch_user_stats">Failed to fetch user stats</string>
    <string name="failed_fetch_question_history">Failed to fetch question history</string>
    <string name="science">Science</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="art">Art</string>
    <string name="food">Food</string>
    <string name="movies">Movies</string>
    <string name="categories">Categories</string>

    <!-- Strings for QuestionActivity -->
    <string name="cat_txt">Category: </string>
    <string name="eg_q">GOOD LUCK!</string>
    <string name="choice_txt">Make a Choice</string>
    <string name="next_start">Press NEXT to begin!</string>
    <string name="ans_txt">ANSWER</string>
    <string name="question_error_fetch">Error fetching trivia questions!</string>
    <string name="question_error_parsing">Error parsing trivia questions!</string>
    <string name="firebase_error_fetch_data">Failed to fetch user data</string>
    <string name="firebase_error_update_data">Failed to update user data</string>
    <string name="firebase_success_update_data">Data successfully updated</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="end_of_questions">End of questions. Your score is %1$d out of %2$d</string>

    <!-- Strings for SettingsActivity -->
    <string name="question_difficulty">DIFFICULTY</string>
    <string name="question_type">QUESTION TYPE</string>
    <string name="question_number">QUESTION NUMBER</string>
    <string name="enter_number_hint">ENTER A NUMBER</string>
    <string name="true_or_false">TRUE/FALSE</string>
    <string name="any_choice">ANY</string>
    <string name="multiple_choice">MULTIPLE</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="update_button">UPDATE</string>
    <string name="error_logout_first">PLEASE LOGOUT FIRST</string>
    <string name="error_no_user_logged_in">NO USER LOGGED IN</string>
    <string name="error_registration_failed">FAILED TO REGISTER</string>
    <string name="error_login_failed">LOGIN FAILED</string>
    <string name="error_invalid_email">INVAILD EMAIL</string>
    <string name="logged_in_message">LOGGED IN %1$D</string>


</resources>
