<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightPrimaryColor"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="75dp"
        android:background="@color/DarkPrimaryColor"
        app:subtitleTextColor="@color/TextIcons" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MULTU"
        android:id="@+id/type_btn">
    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TF"
        android:id="@+id/type_btn2">
    </com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cat_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/cat_txt"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:id="@+id/question_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/eg_q"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="200dp"
            android:text="@string/choice_txt" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container_view_tag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</androidx.appcompat.widget.LinearLayoutCompat>
